# mattermost-rs

./: .gitignore  Cargo.toml
src/: error.rs  lib.rs  main.rs  serialize.rs  websocket.rs  websocket_client.rs
src/api/: mod.rs
