[package]
name = "mattermost_structs"
version = "0.1.0"
authors = ["Jonas Bushart <jonas@bushart.org>"]

[[bin]]
name = "mmstest"
doc = false
path = "src/main.rs"

[[bin]]
name = "mmdump"
doc = true
path = "src/bin/mmdump.rs"

[[bin]]
name = "test_parse_log"
path = "src/bin/test_parse_log.rs"

[lib]
name = "mattermost_structs"
doc = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
env_logger = "0.5"
error-chain = "0.12"
lazy_static = "1.0"
log = "0.4"
openssl-probe = "0.1.1"
reqwest = "0.8"
serde = "1.0.36"
serde_derive = "1.0.36"
serde_json = "1.0.13"
serde_with = { version = "0.2.0", features = [ "json" ] }
serde_yaml = "0.7"
structopt = "0.2.2"
url = "1.5"
ws = { version = "0.7", features = ["ssl"] }
