[package]
name = "mattermost_structs"
version = "0.1.0"
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"

[[bin]]
name = "mmstest"
doc = false
path = "src/main.rs"

[[bin]]
name = "test_parse_log"
path = "src/bin/test_parse_log.rs"

[lib]
name = "mattermost_structs"
doc = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
env_logger = "0.6"
error-chain = "0.12"
lazy_static = "1.1"
log = "0.4"
openssl-probe = "0.1.2"
reqwest = "0.9"
serde = { version = "1.0.36", features = [ "derive" ] }
serde_json = "1.0.13"
serde_with = { version = "1.2.0", features = [ "json" ] }
serde_yaml = "0.8"
structopt = "0.2.2"
url = "1.5"
ws = { version = "0.8", features = ["ssl"] }
